Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17168

mariabackup reports "failed to open bitmap directory" on incremental backup since 10.2.15

    XMLWordPrintable

Details

    Description

      Since MariaDB 10.2.15 mariabackup is reporting an error opening the bitmap directory, but otherwise continues just fine:

      [...]
         2018-09-10 19:44:30 139884636551360 [Warning] InnoDB: Allocated tablespace ID 1 for mysql/innodb_table_stats, old maximum was 0
         180910 19:44:30 >> log scanned up to (1862243)
      >> InnoDB: Error: failed to open bitmap directory '' 
         mariabackup: using the full scan for incremental backup
         180910 19:44:30 [01] Copying ibdata1 to /home/vagrant/2/ibdata1.delta
      [...]
      

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            hholzgra Hartmut Holzgraefe
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.75h
                0.75h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.