MDEV-17168 mariabackup reports "failed to open bitmap directory"

MariaDB does not support changed page tracking, since 10.2. Remove bitmap
initialization